<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="right"
        android:id="@+id/logoutButton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/userAccountWelcome"
        tools:text="Welcome Jose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_balance"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/accountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="100sp"/>

    <Button
        android:id="@+id/depositButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_10"/>

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_10"/>

</LinearLayout>